# katapult

./: .gitignore  LICENSE.md  README.md  _quarto.yml  pyproject.toml
.katapult/: HOSTVARS  katx
_site/: README.html  search.json
_site/lib/src/katapult/project_template/{{cookiecutter.project_slug}}/srv/: documentation.html  reports.html  (+1 more)
_site/nbk/reports/: med_2_sorted_lists_3.html
_site/nbk/wip/: med_2_sorted_lists_1.html
_site/site_libs/bootstrap/: bootstrap-8c58a91cce097a0c1bd2bbaa946d9c85.min.css
_site/srv/: documentation.html  reports.html  services.html  styles.css
api/: pyproject.toml
api/src/api/: __init__.py
app/: .sesskey  main.py  pyproject.toml
docs/: README.html  listings.json  search.json
docs/lib/: index.html  katapult.html  search.js
docs/lib/katapult/: calculations.html  cli.html  commands.html
docs/nbk/docs/: jupyterlab.html  python_lib.html  usage.html
docs/nbk/reports/: med_2_sorted_lists_3.html
docs/nbk/wip/: med_2_sorted_lists_1.html
docs/srv/: documentation.html  kat.html  katx.html  reports.html  services.html
lib/: pyproject.toml
lib/src/katapult/: __init__.py  calculations.py  cli.py  commands.py
lib/src/katapult/project_template/: cookiecutter.json
lib/src/katapult/project_template/{{cookiecutter.project_slug}}/: _quarto.yml
lib/src/katapult/project_template/{{cookiecutter.project_slug}}/.katapult/: HOSTVARS  katx
lib/src/katapult/project_template/{{cookiecutter.project_slug}}/app/: main.py
lib/src/katapult/project_template/{{cookiecutter.project_slug}}/lib/: pyproject.toml
lib/src/katapult/project_template/{{cookiecutter.project_slug}}/lib/src/{{cookiecutter.project_slug}}/: __init__.py
lib/src/katapult/project_template/{{cookiecutter.project_slug}}/nbk/: med_2_sorted_lists_2.ipynb  pyproject.toml
lib/src/katapult/project_template/{{cookiecutter.project_slug}}/srv/: documentation.qmd  services.qmd
nbk/: pyproject.toml
nbk/docs/: jupyterlab.ipynb  python_lib.ipynb  usage.ipynb
nbk/docs/.ipynb_checkpoints/: usage-checkpoint.ipynb
nbk/reports/: med_2_sorted_lists_3.ipynb
nbk/reports/.ipynb_checkpoints/: med_2_sorted_lists_3-checkpoint.ipynb
nbk/wip/: max_prod.py  med_2_sorted_lists_1.ipynb
src/katapult/: application.py
src/katapult/project_template/hooks/: post_gen_project.py
src/katapult/project_template/{{cookiecutter.project_slug}}/: _quarto.yml
src/katapult/project_template/{{cookiecutter.project_slug}}/api/: pyproject.toml
src/katapult/project_template/{{cookiecutter.project_slug}}/app/: pyproject.toml
src/katapult/project_template/{{cookiecutter.project_slug}}/nbk/reports/: med_2_sorted_lists_3.ipynb
src/katapult/project_template/{{cookiecutter.project_slug}}/srv/: documentation.qmd  reports.qmd
srv/: documentation.qmd  kat.qmd  katx.qmd  services.qmd
(+8 files in other folders)
