[project]
name = "katapult"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aaron Palumbo", email = "ajp@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "cookiecutter>=2.6.0",
    "rich>=14.0.0",
]

[project.scripts]
kat = "katapult.application:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/katapult"]

[tool.hatch.build.targets.wheel.force-include]
"src/katapult/project_template" = "katapult/project_template"
