[project]
name = "nb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-execute-time>=3.2.0",
    "jupyterlab-vim>=4.1.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "rich>=14.0.0",
]
